@@ -60,8 +60,8 @@
                         <platform>1.6</platform>
                     </sdk>
                     <deleteConflictingFiles>true</deleteConflictingFiles>
-                    <device>emulator</device>
-                    <!--<device>usb</device>-->
+                    <!--<device>emulator</device>-->
+                    <device>usb</device>
 
                 </configuration>
                 <extensions>true</extensions>
