@@ -55,6 +55,23 @@
                       android:layout_weight="1"/>
         </TableRow>
         <TableRow>
+            <TextView android:text="@string/handful"/>
+            <Spinner android:id="@+id/handful"
+                     android:layout_height="wrap_content"
+                     android:layout_width="wrap_content"
+                     android:layout_weight="1"/>
+        </TableRow>
+        <TableRow>
+            <CheckBox android:id="@+id/oneIsLast"
+                      android:checked="false"
+                      android:layout_weight="1"
+                      android:text="@string/oneIsLast"/>
+            <CheckBox android:id="@+id/forDefense"
+                      android:checked="false"
+                      android:layout_weight="1"
+                      android:text="@string/forDefense"/>
+        </TableRow>
+        <TableRow>
             <Button android:layout_height="wrap_content"
                     android:text="Terminé"
                     android:id="@+id/saveButton"
