@@ -36,12 +36,12 @@
                              android:layout_height="wrap_content"
                              android:id="@+id/c_b_0"
                              android:text="0"/>
-                <RadioButton android:checked="true"
+                <RadioButton android:checked="false"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:id="@+id/c_b_1"
                              android:text="1"/>
-                <RadioButton android:checked="false"
+                <RadioButton android:checked="true"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:id="@+id/c_b_2"
@@ -59,6 +59,23 @@
                       android:layout_height="wrap_content"
                       android:layout_width="wrap_content"
                       android:layout_weight="1"/>
+        </TableRow>
+        <TableRow>
+            <TextView android:text="@string/handful"/>
+            <Spinner android:id="@+id/handful"
+                     android:layout_height="wrap_content"
+                     android:layout_width="wrap_content"
+                     android:layout_weight="1"/>
+        </TableRow>
+        <TableRow>
+            <CheckBox android:id="@+id/oneIsLast"
+                      android:checked="false"
+                      android:layout_weight="1"
+                      android:text="@string/oneIsLast"/>
+            <CheckBox android:id="@+id/forDefense"
+                      android:checked="false"
+                      android:layout_weight="1"
+                      android:text="@string/forDefense"/>
         </TableRow>
         <TableRow>
             <Button android:layout_height="wrap_content"
